--- a/app/src/main/res/layout/activity_contact_admin.xml
+++ b/app/src/main/res/layout/activity_contact_admin.xml
@@ -4,30 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg4"
-    tools:context="com.example.mohamed.myapplication.contact_info">
+    tools:context="com.example.mohamed.myapplication.contact_admin">
+
 
     <RelativeLayout
+        android:id="@+id/rel3"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:background="@drawable/bg1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <Button
-            android:id="@+id/button7"
-            android:layout_width="136dp"
-            android:layout_height="150dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/imageButton"
-            android:layout_toRightOf="@+id/imageButton"
-            android:background="@drawable/findus"
-            android:onClick="facebook" />
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/textView22"
@@ -37,7 +28,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_weight="1"
-            android:text="Phone : "
+            android:text=" Phone : "
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -45,27 +36,11 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:layout_below="@+id/textView22"
-            android:layout_marginTop="8dp"
+            android:layout_centerHorizontal="true"
             android:layout_weight="0.5"
             android:text="-01022771375"
             android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView3"
-            android:layout_marginTop="10dp"
-            android:layout_weight="0.5"
-            android:text="-38378719"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
 
         <TextView
             android:id="@+id/textView66"
@@ -73,11 +48,24 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView4"
-            android:layout_marginTop="10dp"
+            android:layout_below="@+id/textView3"
+            android:layout_marginTop="26dp"
             android:text="Email:"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tex44"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView3"
+            android:layout_weight="0.5"
+            android:text="@string/_38378719"
+            android:textSize="20sp"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
 
         <TextView
             android:id="@+id/textView77"
@@ -99,25 +87,11 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView66"
-            android:layout_marginTop="10dp"
             android:layout_weight="0.2"
             android:text="-booklet.dokki@gmail.com  "
             android:textSize="20sp"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="135dp"
-            android:layout_height="150dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/instagramlogo"
-            android:onClick="instagram"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp"
-            android:layout_alignTop="@+id/button7" />
 
         <TextView
             android:id="@+id/textView99"
@@ -143,28 +117,15 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/textView111"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView100"
-            android:layout_marginTop="13dp"
+            android:layout_marginTop="10dp"
             android:text="-Dokki : 1 Dokki Street"
             android:textSize="20sp" />
-
-        <ImageButton
-            android:id="@+id/imageButton5"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignTop="@+id/button7"
-            android:layout_toEndOf="@+id/button7"
-            android:layout_toRightOf="@+id/button7"
-            android:background="@drawable/google"
-            android:onClick="map"
-            tools:layout_editor_absoluteX="314dp"
-            tools:layout_editor_absoluteY="443dp" />
 
     </RelativeLayout>
 
